# wms-prototype

./: Makefile  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: dashboard.py  items.py  orders.py  routes.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: item.py  order.py
backend/app/scripts/: load_data.py
backend/app/services/: ml.py  tasks.py
backend/tests/: conftest.py  test_dashboard.py  test_health.py  test_items.py  test_orders.py
contracts/: NewsPublisher.sol
fastapi/: __init__.py  testclient.py
fastapi/middleware/: cors.py
frontend/: Dockerfile  index.html  package.json  tsconfig.json
frontend/src/: api.ts  main.tsx
frontend/src/components/: KeyMetricCard.tsx  Layout.tsx
frontend/src/components/dashboard/: InventoryChart.tsx  LowStockList.tsx  OrderStatusChart.tsx  RecentActivity.tsx
frontend/src/pages/: Dashboard.tsx  Inventory.tsx  Orders.tsx
frontend/src/services/: dashboard.ts  items.ts  orders.ts
test/: NewsPublisher.js
